# sipora

./: .dockerignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  renovate.json
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  integration.yml  release.yml
bins/sipora-api/: Cargo.toml
bins/sipora-api/src/: auth.rs  lib.rs  main.rs  openapi.rs  routes.rs  store.rs
bins/sipora-api/tests/: api_http_e2e.rs  api_postgres_e2e.rs
bins/sipora-api/tests/support/: mod.rs
bins/sipora-b2bua/: Cargo.toml
bins/sipora-b2bua/src/: call.rs  cdr.rs  codec.rs  main.rs  routing.rs  udp.rs
bins/sipora-edge/: Cargo.toml
bins/sipora-edge/src/: listener.rs  main.rs
bins/sipora-lb/: Cargo.toml
bins/sipora-lb/src/: balancer.rs  main.rs  udp.rs
bins/sipora-migrate/: Cargo.toml
bins/sipora-migrate/src/: main.rs
bins/sipora-proxy/: Cargo.toml
bins/sipora-proxy/src/: dialog.rs  event_bodies.rs  forward_table.rs  ingress.rs  lib.rs  main.rs  message_sender.rs  notify.rs  proxy_ws.rs  push.rs  redirect.rs  refer_state.rs  responses.rs  routing.rs  udp.rs
bins/sipora-proxy/src/udp/: register.rs
bins/sipora-proxy/tests/: ws_e2e.rs
crates/sipora-auth/: Cargo.toml
crates/sipora-auth/src/: digest.rs  jwt.rs  lib.rs  nonce.rs  stir.rs  turn.rs
crates/sipora-core/: Cargo.toml
crates/sipora-core/src/: config.rs  error.rs  health.rs  health_ready.rs  lib.rs  redis.rs  redis_keys.rs  telemetry.rs
crates/sipora-core/tests/: config_default.rs  non_exhaustive_error.rs
crates/sipora-data/: Cargo.toml
crates/sipora-data/src/: cdr.rs  kafka_cdr.rs  lib.rs
crates/sipora-data/src/pg/: cdr_insert.rs  cdr_query.rs  mod.rs  pool.rs  schema_check.rs  users.rs
crates/sipora-edge/: Cargo.toml
crates/sipora-edge/src/: firewall.rs  lib.rs  ratelimit.rs  redis_ratelimit.rs  ws_table.rs
crates/sipora-location/: Cargo.toml
crates/sipora-location/src/: gruu.rs  lib.rs  presence.rs  redis_store.rs  service.rs  subscription.rs
crates/sipora-media/: Cargo.toml
crates/sipora-media/src/: lib.rs  rtpengine.rs  srtp.rs
crates/sipora-sdp/: Cargo.toml
crates/sipora-sdp/src/: codec.rs  lib.rs  negotiate.rs  offer_answer.rs  session.rs
crates/sipora-sip/: Cargo.toml
crates/sipora-sip/src/: lib.rs  overload.rs  serialize.rs
crates/sipora-sip/src/dialog/: mod.rs  model.rs
crates/sipora-sip/src/parser/: headers.rs  message.rs  mod.rs  request.rs  response.rs  uri.rs
crates/sipora-sip/src/transaction/: client_invite.rs  client_non_invite.rs  manager.rs  mod.rs  server_invite.rs  server_non_invite.rs
crates/sipora-sip/src/types/: header.rs  message.rs  method.rs  mod.rs  status.rs
crates/sipora-transport/: Cargo.toml
crates/sipora-transport/src/: dns.rs  enum_lookup.rs  lib.rs  sip_tcp.rs  tcp.rs  tcp_pool.rs  tls.rs  tls_client.rs  udp.rs  websocket.rs
deploy/docker/: Dockerfile.sipora-api  Dockerfile.sipora-b2bua  Dockerfile.sipora-edge  Dockerfile.sipora-lb  Dockerfile.sipora-migrate  Dockerfile.sipora-proxy
deploy/docker/seccomp/: sipora.json
deploy/docker/secrets/: .gitignore  README.md
deploy/grafana/: alloy.river  loki.yaml  mimir.yaml  tempo.yaml
deploy/grafana/alerting/: notification-channels.yaml  recording-rules.yaml  sip-alerts.yaml
deploy/grafana/dashboards/: sip-overview.json
deploy/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  api.yaml  b2bua.yaml  edge.yaml  lb.yaml  migrate-job.yaml  namespace.yaml  proxy.yaml  serviceaccounts.yaml
docs/: RELEASING.md  configuration.md  index.md  package.json  qualification.md  stability.md
docs/.vitepress/: config.mts
docs/developer/: architecture.md  build-and-test.md  documentation-site.md  workspace.md
docs/project/: changelog.md  license.md
docs/user/: configuration-files.md  database.md  deployment.md  observability.md  overview.md  quickstart.md  services-and-binaries.md
examples/config/: sipora-api.example.toml  sipora-b2bua.example.toml  sipora-edge.example.toml  sipora-lb.example.toml  sipora-proxy.example.toml
migrations/: 20250415000001_users.sql  20250415000002_trunk_certs.sql  20250415000003_redirect_rules.sql  20250415000004_cdr.sql  20250423000001_users_sip_digest_ha1.sql  20250425000001_idx_users_username_domain_lower.sql  20250426000001_users_sip_digest_ha1_sha256.sql
tests/: docker-compose.yml
tests/sipp/: invite.xml  register.xml  run-load-test.sh
