[workspace]
resolver = "2"
members = [
    "crates/sipora-core",
    "crates/sipora-sip",
    "crates/sipora-sdp",
    "crates/sipora-transport",
    "crates/sipora-auth",
    "crates/sipora-location",
    "crates/sipora-data",
    "crates/sipora-media",
    "crates/sipora-edge",
    "bins/sipora-proxy",
    "bins/sipora-b2bua",
    "bins/sipora-edge",
    "bins/sipora-lb",
    "bins/sipora-api",
    "bins/sipora-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.lints.clippy]
dbg_macro = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Parsing
nom = "8"

# SDP
sdp-types = "0.1"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# WebSocket
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP / REST
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
fred = { version = "10", features = ["subscriber-client", "metrics", "i-scripts"] }

# Kafka
rdkafka = { version = "0.39", features = ["cmake-build"] }

# Crypto / Auth
argon2 = "0.5"
jsonwebtoken = "10.3"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
base64 = "0.22"
md-5 = "0.11"
hex = "0.4"
url = "2"
hickory-resolver = "0.26.0"
moka = { version = "0.12.15", features = ["future"] }

# Workspace crates
sipora-core = { path = "crates/sipora-core" }
sipora-sip = { path = "crates/sipora-sip" }
sipora-sdp = { path = "crates/sipora-sdp" }
sipora-transport = { path = "crates/sipora-transport" }
sipora-auth = { path = "crates/sipora-auth" }
sipora-location = { path = "crates/sipora-location" }
sipora-data = { path = "crates/sipora-data" }
sipora-media = { path = "crates/sipora-media" }
sipora-edge = { path = "crates/sipora-edge" }
