[package]
name = "sipora-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "sipora-api"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sipora-core = { workspace = true }
sipora-data = { workspace = true }
sipora-auth = { workspace = true }
sipora-location = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
uuid = { workspace = true }
