[package]
name = "sipora-b2bua"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "sipora-b2bua"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
sipora-auth = { workspace = true }
sipora-core = { workspace = true }
sipora-sdp = { workspace = true }
sipora-media = { path = "../../crates/sipora-media" }
sipora-sip = { workspace = true }
sipora-transport = { workspace = true }
sipora-data = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
