[package]
name = "sipora-migrate"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "sipora-migrate"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sipora-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
