[package]
name = "sipora-auth"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fred = { workspace = true }
sqlx = { workspace = true }
sipora-sip = { workspace = true }
sipora-core = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }
x509-cert = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { version = "0.18", features = ["verify"] }
url = { workspace = true }

[dev-dependencies]
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
rcgen = "0.14"
