[package]
name = "sipora-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fred = { workspace = true }
url = { workspace = true }
