[package]
name = "sipora-media"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sipora-sip = { workspace = true }
sipora-sdp = { workspace = true }
sipora-core = { workspace = true }
