[package]
name = "sipora-sip"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
nom = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sipora-sdp = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
