[package]
name = "sipora-transport"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
sipora-sip = { workspace = true }
sipora-core = { workspace = true }
hickory-resolver = { workspace = true }
moka = { workspace = true }
